src/objects/SIP_Tickets__c/SIP_Tickets__c.object-meta.xml
<CustomObject>
    <description>used for sales incentive related commissions reporting</description>
    <label>SIP Tickets</label>
    <nameField>
        <displayFormat>ST-{0}</displayFormat>
        <label>SIP Tkt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIP Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>