src/objects/SIP_Tickets__c/fields/Reason_for_Request__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Request__c</fullName>
    <label>Reason for Request</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIP Team Admin Ticket</fullName>
            </value>
            <value>
                <fullName>Requesting Xactly Access</fullName>
            </value>
            <value>
                <fullName>General Issue</fullName>
            </value>
            <value>
                <fullName>Quota Change</fullName>
            </value>
            <value>
                <fullName>Missing or Incorrect Order</fullName>
            </value>
            <value>
                <fullName>NRComp</fullName>
            </value>
            <value>
                <fullName>Mgr Discretion Reduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>