src/objects/SIP_Tickets__c/fields/Same__c.field-meta.xml
<CustomField>
    <fullName>Same__c</fullName>
    <description>determines if ticket on behalf of and creator are the same or not.  used in sip ticket approval process</description>
    <formula>IF(
UPPER(Ticket_on_behalf_of__r.EmployeeNumber)  = 
UPPER(CreatedBy.EmployeeNumber),&quot;Samesies&quot;,&quot;Different&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>determines if ticket on behalf of and creator are the same or not.  used in sip ticket approval process</inlineHelpText>
    <label>Same</label>
    <type>Text</type>
</CustomField>