src/objects/SIP_Tickets__c/fields/SamePMgr__c.field-meta.xml
<CustomField>
    <fullName>SamePMgr__c</fullName>
    <formula>IF( 
UPPER(Primary_Sales_Mgr__r.EmployeeNumber) = 
UPPER(CreatedBy.EmployeeNumber),&quot;Samesies&quot;,&quot;Different&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SamePMgr</label>
    <type>Text</type>
</CustomField>