src/objects/SIP_Tickets__c/fields/Team_Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Team_Ticket_Type__c</fullName>
    <description>Select a type for sip team only use such as UAT or MOS. Not for normal Tickets</description>
    <inlineHelpText>Select a type for sip team only use such as UAT or MOS. Not for normal Tickets</inlineHelpText>
    <label>Team Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>MOS</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>PUAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>