src/objects/SIP_Tickets__c/fields/Ticket_on_behalf_of__c.field-meta.xml
<CustomField>
    <fullName>Ticket_on_behalf_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket on behalf of</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SIP_Tickets1</relationshipName>
    <type>Lookup</type>
</CustomField>