src/objects/SIP_Tickets__c/fields/UAT_Expected_v_Actual__c.field-meta.xml
<CustomField>
    <fullName>UAT_Expected_v_Actual__c</fullName>
    <formula>IF( UAT_Expected_Result__c = UAT_Actual_Result__c, &quot;Passed&quot;,&quot;Failed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UAT Expected v Actual</label>
    <type>Text</type>
</CustomField>