src/objects/SIP_Tickets__c/fields/UAT_Plan__c.field-meta.xml
<CustomField>
    <fullName>UAT_Plan__c</fullName>
    <label>UAT Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan 01</fullName>
            </value>
            <value>
                <fullName>Plan 02</fullName>
            </value>
            <value>
                <fullName>Plan 04</fullName>
            </value>
            <value>
                <fullName>Plan 05</fullName>
            </value>
            <value>
                <fullName>Plan 06</fullName>
            </value>
            <value>
                <fullName>Plan 07</fullName>
            </value>
            <value>
                <fullName>Plan 19</fullName>
            </value>
            <value>
                <fullName>Plan 21</fullName>
            </value>
            <value>
                <fullName>Plan 23</fullName>
            </value>
            <value>
                <fullName>Plan 24</fullName>
            </value>
            <value>
                <fullName>Plan 28</fullName>
            </value>
            <value>
                <fullName>Plan 29</fullName>
            </value>
            <value>
                <fullName>Plan 30</fullName>
            </value>
            <value>
                <fullName>Plan 31</fullName>
            </value>
            <value>
                <fullName>Plan 32</fullName>
            </value>
            <value>
                <fullName>Plan 33</fullName>
            </value>
            <value>
                <fullName>Plan 34</fullName>
            </value>
            <value>
                <fullName>Plan 35</fullName>
            </value>
            <value>
                <fullName>Plan 36</fullName>
            </value>
            <value>
                <fullName>Plan 37</fullName>
            </value>
            <value>
                <fullName>Plan 38</fullName>
            </value>
            <value>
                <fullName>Plan 39</fullName>
            </value>
            <value>
                <fullName>Plan 100</fullName>
            </value>
            <value>
                <fullName>Plan 40</fullName>
            </value>
            <value>
                <fullName>Plan 41</fullName>
            </value>
            <value>
                <fullName>Plan 42</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>