src/objects/SIP_Tickets__c/recordTypes/SIP_Ticket.recordType-meta.xml
<RecordType>
    <fullName>SIP_Ticket</fullName>
    <active>true</active>
    <label>SIP Ticket</label>
</RecordType>