src/objects/SIP_Tickets__c/validationRules/Amount_in_Question.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_in_Question</fullName>
    <active>true</active>
    <errorConditionFormula>$User.User_ID_18_Characters__c &lt;&gt; &quot;0051300000CDkLO&quot;
&amp;&amp;
(OR(ISPICKVAL(Reason_for_Request__c,&quot;General Issue&quot;),
 ISPICKVAL(Reason_for_Request__c,&quot;NRComp&quot;)))
&amp;&amp; 
ISBLANK(Amount__c)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Estimate how much commission is related to this ticket.  If unknown, you can enter zero.</errorMessage>
</ValidationRule>