src/objects/SIP_Tickets__c/validationRules/Close_Ticket_wo_Approval_Submission.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Ticket_wo_Approval_Submission</fullName>
    <active>true</active>
    <description>Can&apos;t close a ticket without the approval submit date being populated</description>
    <errorConditionFormula>ISBLANK(Approval_Approved_Date__c)
&amp;&amp;
(OR(ISPICKVAL(Ticket_Status__c,&quot;Closed - Request Completed&quot;),
    ISPICKVAL(Ticket_Status__c,&quot;Closed - Not All Requests Complete&quot;)))
&amp;&amp;
$User.User_ID_18_Characters__c &lt;&gt; &quot;0051300000CDkLOAA1&quot;</errorConditionFormula>
    <errorMessage>You can&apos;t close a ticket that still in the approval process.</errorMessage>
</ValidationRule>