src/objects/SIP_Tickets__c/validationRules/Closed_Tickets.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Tickets</fullName>
    <active>false</active>
    <description>Cannot reopen closed tickets</description>
    <errorConditionFormula>ISNULL(Closed_Date__c) = FALSE
&amp;&amp;
OR(
$User.User_ID_18_Characters__c  &lt;&gt; &quot;0051300000CDkLOAA1&quot;,
$User.User_ID_18_Characters__c  &lt;&gt; &quot;0051300000BcFJKAA3&quot;)</errorConditionFormula>
    <errorMessage>Cannot Reopen Closed Tickets</errorMessage>
</ValidationRule>