src/objects/SIP_Tickets__c/validationRules/Current_Comment_Review_Assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_Comment_Review_Assigned</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Current_Comments__c)&gt;0
&amp;&amp;
ISPICKVAL( Ticket_Status__c, &quot;SIP Team Not Yet Reviewed&quot;) 
&amp;&amp; 
ISPICKVAL( Reason_for_Request__c, &quot;SIP Team Admin Ticket&quot;)=FALSE</errorConditionFormula>
    <errorDisplayField>Ticket_Status__c</errorDisplayField>
    <errorMessage>You cannot enter notes until the Ticket Status is moved out of &apos;SIP Team Not Yet Reviewed&apos;</errorMessage>
</ValidationRule>