src/objects/SIP_Tickets__c/validationRules/Description_Field_Quota_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Field_Quota_change</fullName>
    <active>true</active>
    <description>Issue description not required in Quota change SIP tickets</description>
    <errorConditionFormula>ISPICKVAL(Reason_for_Request__c, &quot;Quota Change&quot;) 
&amp;&amp; (ISBLANK( Issue_Description__c ))=FALSE</errorConditionFormula>
    <errorDisplayField>Issue_Description__c</errorDisplayField>
    <errorMessage>Leave Issue description blank and fill in Quota change section</errorMessage>
</ValidationRule>