src/objects/SIP_Tickets__c/validationRules/Education_Specifics.validationRule-meta.xml
<ValidationRule>
    <fullName>Education_Specifics</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Ticket_Status__c,&quot;Closed - Request Completed&quot;)= TRUE
&amp;&amp;
ISBLANK(TEXT(Education_Specifics__c))
&amp;&amp;
ISPICKVAL(Ticket_Category_Selection__c,&quot;Education Issue&quot;)=TRUE</errorConditionFormula>
    <errorDisplayField>Education_Specifics__c</errorDisplayField>
    <errorMessage>Don&apos;t you want to fill out this super cool field first?</errorMessage>
</ValidationRule>