src/objects/SIP_Tickets__c/validationRules/Mgr_Discretion_Reduction_Metric.validationRule-meta.xml
<ValidationRule>
    <fullName>Mgr_Discretion_Reduction_Metric</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Reason_for_Request__c,&apos;Mgr Discretion Reduction&apos;)
&amp;&amp;
ISBLANK(TEXT(Mgr_Discretion_Reduction_Metric__c))
&amp;&amp;
 $User.User_ID_18_Characters__c &lt;&gt; &apos;0051300000CDkLOAA1&apos;</errorConditionFormula>
    <errorDisplayField>Mgr_Discretion_Reduction_Metric__c</errorDisplayField>
    <errorMessage>Please choose a metric that should be reduced</errorMessage>
</ValidationRule>