src/objects/SIP_Tickets__c/validationRules/NRComp.validationRule-meta.xml
<ValidationRule>
    <fullName>NRComp</fullName>
    <active>true</active>
    <description>does not allow the Ticket on behalf of to be the same as Ticket created by.  encouraging managers to create for reps</description>
    <errorConditionFormula>Ticket_on_behalf_of__r.User_ID_18_Characters__c =
 CreatedBy.User_ID_18_Characters__c
&amp;&amp;
ISPICKVAL( Reason_for_Request__c,&quot;NRComp&quot;)=TRUE</errorConditionFormula>
    <errorMessage>Only a Primary Mgr can submit an NRComp ticket.  An individual cannot submit an NRComp ticket for his or her self.</errorMessage>
</ValidationRule>