src/objects/SIP_Tickets__c/validationRules/Quota_Change_no_Amount_pop.validationRule-meta.xml
<ValidationRule>
    <fullName>Quota_Change_no_Amount_pop</fullName>
    <active>true</active>
    <description>amount field in a quota change ticket should not be populated</description>
    <errorConditionFormula>ISPICKVAL( Reason_for_Request__c, &quot;Quota Change&quot;)
&amp;&amp;
Amount__c &lt;&gt; 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>For quota change tickets, this amount field cannot be populated. Please populate only the fields in the Quota Change section.</errorMessage>
</ValidationRule>