src/objects/SIP_Tickets__c/validationRules/Quota_Change_no_Issue_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Quota_Change_no_Issue_Description</fullName>
    <active>true</active>
    <description>Quota Change cannot have info in issue description</description>
    <errorConditionFormula>ISPICKVAL( Reason_for_Request__c, &quot;Quota Change&quot;)
&amp;&amp;
ISBLANK( Issue_Description__c) = FALSE</errorConditionFormula>
    <errorDisplayField>Issue_Description__c</errorDisplayField>
    <errorMessage>Please enter the description for the quota change in the &quot;Reason for Quota Change&quot; field below.</errorMessage>
</ValidationRule>