src/objects/SIP_Tickets__c/validationRules/Quota_Change_old_or_new_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Quota_Change_old_or_new_value</fullName>
    <active>true</active>
    <description>The old and new values on the quota change section</description>
    <errorConditionFormula>ISPICKVAL( Reason_for_Request__c, &quot;Quota Change&quot;)
&amp;&amp;
(OR(
 Old_Quota_Amount__c = 0,
 New_Quota_Amount__c = 0))</errorConditionFormula>
    <errorMessage>In the Quota Change Section, Neither the &quot;New Quota Amount&quot; or the &quot;Old Quota Amount&quot; can be zero. Please populate with quota amount.</errorMessage>
</ValidationRule>