src/objects/SIP_Tickets__c/validationRules/Quota_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Quota_Info</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Reason_for_Request__c, &quot;Quota Change&quot;)
&amp;&amp;
OR(
ISPICKVAL(Quota_Type__c,&quot;&quot;),
ISBLANK(Old_Quota_Amount__c),
ISBLANK(New_Quota_Amount__c),
ISBLANK(Reason_for_Quota_Change__c))</errorConditionFormula>
    <errorMessage>This ticket can only be saved once you fill out all of the fields in the Quota Change section.</errorMessage>
</ValidationRule>