src/objects/SIP_Tickets__c/validationRules/Reason_for_Quota_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_Quota_Change</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Reason_for_Request__c, &quot;Quota Change&quot;) 
&amp;&amp; 
LEN(Reason_for_Quota_Change__c) &lt; 9</errorConditionFormula>
    <errorDisplayField>Reason_for_Quota_Change__c</errorDisplayField>
    <errorMessage>Please enter the full reason for the quota change.</errorMessage>
</ValidationRule>