src/objects/SIP_Tickets__c/validationRules/SIP_Team_Admin_Ticket.validationRule-meta.xml
<ValidationRule>
    <fullName>SIP_Team_Admin_Ticket</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Reason_for_Request__c,&quot;SIP Team Admin Ticket&quot;)
&amp;&amp;
ISPICKVAL($User.SIP_Current_Title__c,&quot;SIP Team&quot;) = FALSE</errorConditionFormula>
    <errorDisplayField>Reason_for_Request__c</errorDisplayField>
    <errorMessage>You can only choose this option if you are a SIP Team Member.  Otherwise, try another available selection.</errorMessage>
</ValidationRule>