src/objects/SIP_Tickets__c/validationRules/SIP_Team_Owner_Assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>SIP_Team_Owner_Assigned</fullName>
    <active>true</active>
    <description>You cannot close a ticket until SIP team owner is selected</description>
    <errorConditionFormula>(OR(ISPICKVAL(Ticket_Status__c,&quot;Closed - Request Completed&quot;), 
ISPICKVAL(Ticket_Status__c,&quot;Closed - Not All Requests Complete&quot;))) 
&amp;&amp; 
BEGINS(Ticket_Owner__c , &quot;Not Yet Assigned&quot;)</errorConditionFormula>
    <errorDisplayField>SIP_Team_Reassign__c</errorDisplayField>
    <errorMessage>Please select a SIP team owner</errorMessage>
</ValidationRule>