src/objects/SIP_Tickets__c/validationRules/Ticket_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Ticket_Category</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISPICKVAL(Ticket_Status__c,&quot;Closed - Request Completed&quot;),
ISPICKVAL(Ticket_Status__c,&quot;Closed - Not all Requests Completed&quot;))
&amp;&amp;
ISPICKVAL(Ticket_Category_Selection__c,&quot;&quot;)
&amp;&amp;
AND(ISPICKVAL(Reason_for_Request__c,&quot;SIP Team Admin Ticket&quot;)=FALSE,
ISPICKVAL(Reason_for_Request__c,&quot;NRComp&quot;)=FALSE,
ISPICKVAL(Reason_for_Request__c,&quot;Requesting Xactly Access&quot;)=FALSE,
ISPICKVAL(Reason_for_Request__c,&quot;Quota Change&quot;)=FALSE)</errorConditionFormula>
    <errorDisplayField>Ticket_Category_Selection__c</errorDisplayField>
    <errorMessage>Please select a Ticket Category to ensure awesome reporting</errorMessage>
</ValidationRule>