src/objects/SIP_Tickets__c/validationRules/Ticket_on_behalf_of.validationRule-meta.xml
<ValidationRule>
    <fullName>Ticket_on_behalf_of</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Ticket_on_behalf_of__c)
&amp;&amp;
ISPICKVAL($User.SIP_Current_Title__c,&quot;SIP Team&quot;) = FALSE</errorConditionFormula>
    <errorDisplayField>Ticket_on_behalf_of__c</errorDisplayField>
    <errorMessage>Please let us know who this ticket is being submitted for</errorMessage>
</ValidationRule>