src/objects/SIP_Tickets__c/validationRules/UAT_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>UAT_Status</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Current_Comments__c) = FALSE
&amp;&amp;
ISPICKVAL( UAT_Status__c, &quot;Not Started&quot;)</errorConditionFormula>
    <errorDisplayField>UAT_Status__c</errorDisplayField>
    <errorMessage>Awww man! It&apos;s not cool to enter comments unless UAT status is moved out of &quot;Not Started&quot;</errorMessage>
</ValidationRule>