src/objects/SIP_Tickets__c/listViews/APAC_SIP_Tickets1.listView-meta.xml
<ListView>
    <fullName>APAC_SIP_Tickets1</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>Ticket_Status__c</columns>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Issue_Description__c</columns>
    <columns>Comment_History__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Closed_Date__c</columns>
    <columns>Ticket_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Lokesh,jun,shashank,tushar,may,pu,amit,zhijun,nap,sathesh,loke,nikita,shannon</value>
    </filters>
    <filters>
        <field>Regional_Leader__c</field>
        <operation>equals</operation>
        <value>Steven Lien</value>
    </filters>
    <label>APAC  SIP Tickets</label>
</ListView>