src/objects/SIP_Tickets__c/listViews/EMEAI_SIP_Tickets.listView-meta.xml
<ListView>
    <fullName>EMEAI_SIP_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Issue_Description__c</columns>
    <columns>Comment_History__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Closed_Date__c</columns>
    <columns>Ticket_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Regional_Leader__c</field>
        <operation>equals</operation>
        <value>RandyD Anderson</value>
    </filters>
    <label>EMEAI SIP Tickets</label>
</ListView>